samples/_failures_safe/1761665881_1b778b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fefe7fd8.c: In function ‘main’:
./samples/SAFE/__tmp_fefe7fd8.c:167:25: error: ‘MAX’ undeclared (first use in this function)
  167 |     struct Token tokens[MAX
      |                         ^~~
./samples/SAFE/__tmp_fefe7fd8.c:167:25: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_fefe7fd8.c:167:28: error: expected ‘]’ at end of input
  167 |     struct Token tokens[MAX
      |                            ^
      |                            ]
./samples/SAFE/__tmp_fefe7fd8.c:167:12: error: expected declaration or statement at end of input
  167 |     struct Token tokens[MAX
      |            ^~~~~
